src/parser/recipe-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = /^[\n]/,
      peg$c1 = peg$classExpectation(["\n"], false, false),
      peg$c2 = function(amount, unit, imprecise_unit, preposition, ingredient) {
          var result = {
            amount: amount,
            ingredient: ingredient,
            unit: unit,
            imprecise_unit: imprecise_unit
          };

          for(var i in result) {
            if(result[i] === null || result[i] === undefined) {
              delete result[i];
            }
          }

          return result;
        },
      peg$c3 = " ",
      peg$c4 = peg$literalExpectation(" ", false),
      peg$c5 = /^[\t]/,
      peg$c6 = peg$classExpectation(["\t"], false, false),
      peg$c7 = "of",
      peg$c8 = peg$literalExpectation("of", true),
      peg$c9 = " and a ",
      peg$c10 = peg$literalExpectation(" and a ", true),
      peg$c11 = "and",
      peg$c12 = peg$literalExpectation("and", true),
      peg$c13 = " and ",
      peg$c14 = peg$literalExpectation(" and ", true),
      peg$c15 = " - ",
      peg$c16 = peg$literalExpectation(" - ", true),
      peg$c17 = "-",
      peg$c18 = peg$literalExpectation("-", true),
      peg$c19 = ", ",
      peg$c20 = peg$literalExpectation(", ", true),
      peg$c21 = ",",
      peg$c22 = peg$literalExpectation(",", true),
      peg$c23 = "an",
      peg$c24 = peg$literalExpectation("an", true),
      peg$c25 = "a",
      peg$c26 = peg$literalExpectation("a", true),
      peg$c27 = "a ",
      peg$c28 = peg$literalExpectation("a ", true),
      peg$c29 = peg$anyExpectation(),
      peg$c30 = /^[,]/,
      peg$c31 = peg$classExpectation([","], false, false),
      peg$c32 = function(letters) { return letters.join(''); },
      peg$c33 = /^[.]/,
      peg$c34 = peg$classExpectation(["."], false, false),
      peg$c35 = function(a) {return parseFloat(a)},
      peg$c36 = function(a, b) {return parseInt(a) + b},
      peg$c37 = function(a, b) {return parseInt(a) + b },
      peg$c38 = "one",
      peg$c39 = peg$literalExpectation("one", true),
      peg$c40 = function() {return 1},
      peg$c41 = "two",
      peg$c42 = peg$literalExpectation("two", true),
      peg$c43 = function() {return 2},
      peg$c44 = "three",
      peg$c45 = peg$literalExpectation("three", true),
      peg$c46 = function() {return 3},
      peg$c47 = "four",
      peg$c48 = peg$literalExpectation("four", true),
      peg$c49 = function() {return 4},
      peg$c50 = "five",
      peg$c51 = peg$literalExpectation("five", true),
      peg$c52 = function() {return 5},
      peg$c53 = "six",
      peg$c54 = peg$literalExpectation("six", true),
      peg$c55 = function() {return 6},
      peg$c56 = "seven",
      peg$c57 = peg$literalExpectation("seven", true),
      peg$c58 = function() {return 7},
      peg$c59 = "eight",
      peg$c60 = peg$literalExpectation("eight", true),
      peg$c61 = function() {return 8},
      peg$c62 = "nine",
      peg$c63 = peg$literalExpectation("nine", true),
      peg$c64 = "ten",
      peg$c65 = peg$literalExpectation("ten", true),
      peg$c66 = "eleven",
      peg$c67 = peg$literalExpectation("eleven", true),
      peg$c68 = "twelve",
      peg$c69 = peg$literalExpectation("twelve", true),
      peg$c70 = "thirteen",
      peg$c71 = peg$literalExpectation("thirteen", true),
      peg$c72 = "half",
      peg$c73 = peg$literalExpectation("half", true),
      peg$c74 = function() {return .5},
      peg$c75 = "quarter",
      peg$c76 = peg$literalExpectation("quarter", true),
      peg$c77 = function() {return .25},
      peg$c78 = "third",
      peg$c79 = peg$literalExpectation("third", true),
      peg$c80 = function() {return .33},
      peg$c81 = "couple",
      peg$c82 = peg$literalExpectation("couple", true),
      peg$c83 = "few",
      peg$c84 = peg$literalExpectation("few", true),
      peg$c85 = /^[\/]/,
      peg$c86 = peg$classExpectation(["/"], false, false),
      peg$c87 = function(a, b) {return a / b},
      peg$c88 = peg$literalExpectation("-", false),
      peg$c89 = function(a, b) {return (parseFloat(a) + parseFloat(b)) / 2.0},
      peg$c90 = peg$literalExpectation(" - ", false),
      peg$c91 = " to ",
      peg$c92 = peg$literalExpectation(" to ", false),
      peg$c93 = " or ",
      peg$c94 = peg$literalExpectation(" or ", false),
      peg$c95 = /^[0-9]/,
      peg$c96 = peg$classExpectation([["0", "9"]], false, false),
      peg$c97 = function(digits) { return parseInt(digits.join('')); },
      peg$c98 = /^[a-zA-Z]/,
      peg$c99 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c100 = "cups",
      peg$c101 = peg$literalExpectation("cups", true),
      peg$c102 = "cup",
      peg$c103 = peg$literalExpectation("cup", true),
      peg$c104 = "cps",
      peg$c105 = peg$literalExpectation("cps", true),
      peg$c106 = "cps.",
      peg$c107 = peg$literalExpectation("cps.", true),
      peg$c108 = "c.",
      peg$c109 = peg$literalExpectation("c.", true),
      peg$c110 = "c",
      peg$c111 = peg$literalExpectation("c", true),
      peg$c112 = "glass",
      peg$c113 = peg$literalExpectation("glass", true),
      peg$c114 = "glas",
      peg$c115 = peg$literalExpectation("glas", true),
      peg$c116 = "gls",
      peg$c117 = peg$literalExpectation("gls", true),
      peg$c118 = "bowl",
      peg$c119 = peg$literalExpectation("bowl", true),
      peg$c120 = "bowls",
      peg$c121 = peg$literalExpectation("bowls", true),
      peg$c122 = "bwl",
      peg$c123 = peg$literalExpectation("bwl", true),
      peg$c124 = "bottles",
      peg$c125 = peg$literalExpectation("bottles", true),
      peg$c126 = "bottle",
      peg$c127 = peg$literalExpectation("bottle", true),
      peg$c128 = "btl.",
      peg$c129 = peg$literalExpectation("btl.", true),
      peg$c130 = "btl",
      peg$c131 = peg$literalExpectation("btl", true),
      peg$c132 = "fluid",
      peg$c133 = peg$literalExpectation("fluid", true),
      peg$c134 = "fl",
      peg$c135 = peg$literalExpectation("fl", true),
      peg$c136 = ".",
      peg$c137 = peg$literalExpectation(".", false),
      peg$c138 = "gallons",
      peg$c139 = peg$literalExpectation("gallons", true),
      peg$c140 = "gallon",
      peg$c141 = peg$literalExpectation("gallon", true),
      peg$c142 = "gal.",
      peg$c143 = peg$literalExpectation("gal.", true),
      peg$c144 = "gal",
      peg$c145 = peg$literalExpectation("gal", true),
      peg$c146 = "ounces",
      peg$c147 = peg$literalExpectation("ounces", true),
      peg$c148 = "ounce",
      peg$c149 = peg$literalExpectation("ounce", true),
      peg$c150 = "oz.",
      peg$c151 = peg$literalExpectation("oz.", true),
      peg$c152 = "oz",
      peg$c153 = peg$literalExpectation("oz", true),
      peg$c154 = "pints",
      peg$c155 = peg$literalExpectation("pints", true),
      peg$c156 = "pint",
      peg$c157 = peg$literalExpectation("pint", true),
      peg$c158 = "pt.",
      peg$c159 = peg$literalExpectation("pt.", true),
      peg$c160 = "pt",
      peg$c161 = peg$literalExpectation("pt", true),
      peg$c162 = "pounds",
      peg$c163 = peg$literalExpectation("pounds", true),
      peg$c164 = "pound",
      peg$c165 = peg$literalExpectation("pound", true),
      peg$c166 = "lbs.",
      peg$c167 = peg$literalExpectation("lbs.", true),
      peg$c168 = "lbs",
      peg$c169 = peg$literalExpectation("lbs", true),
      peg$c170 = "lb.",
      peg$c171 = peg$literalExpectation("lb.", true),
      peg$c172 = "lb",
      peg$c173 = peg$literalExpectation("lb", true),
      peg$c174 = "quarts",
      peg$c175 = peg$literalExpectation("quarts", true),
      peg$c176 = "quart",
      peg$c177 = peg$literalExpectation("quart", true),
      peg$c178 = "qts.",
      peg$c179 = peg$literalExpectation("qts.", true),
      peg$c180 = "qts",
      peg$c181 = peg$literalExpectation("qts", true),
      peg$c182 = "qt.",
      peg$c183 = peg$literalExpectation("qt.", true),
      peg$c184 = "qt",
      peg$c185 = peg$literalExpectation("qt", true),
      peg$c186 = "tablespoons",
      peg$c187 = peg$literalExpectation("tablespoons", true),
      peg$c188 = "tablespoon",
      peg$c189 = peg$literalExpectation("tablespoon", true),
      peg$c190 = "spoon",
      peg$c191 = peg$literalExpectation("spoon", true),
      peg$c192 = "tbsp.",
      peg$c193 = peg$literalExpectation("tbsp.", true),
      peg$c194 = "tbsp",
      peg$c195 = peg$literalExpectation("tbsp", true),
      peg$c196 = "tbs.",
      peg$c197 = peg$literalExpectation("tbs.", true),
      peg$c198 = "tbl.",
      peg$c199 = peg$literalExpectation("tbl.", true),
      peg$c200 = "tbs",
      peg$c201 = peg$literalExpectation("tbs", true),
      peg$c202 = "tbl",
      peg$c203 = peg$literalExpectation("tbl", true),
      peg$c204 = "T.",
      peg$c205 = peg$literalExpectation("T.", false),
      peg$c206 = "T",
      peg$c207 = peg$literalExpectation("T", false),
      peg$c208 = "teaspoons",
      peg$c209 = peg$literalExpectation("teaspoons", true),
      peg$c210 = "teaspoon",
      peg$c211 = peg$literalExpectation("teaspoon", true),
      peg$c212 = "tsp.",
      peg$c213 = peg$literalExpectation("tsp.", true),
      peg$c214 = "tsp",
      peg$c215 = peg$literalExpectation("tsp", true),
      peg$c216 = "t.",
      peg$c217 = peg$literalExpectation("t.", false),
      peg$c218 = "t",
      peg$c219 = peg$literalExpectation("t", false),
      peg$c220 = "grams",
      peg$c221 = peg$literalExpectation("grams", true),
      peg$c222 = "gram",
      peg$c223 = peg$literalExpectation("gram", true),
      peg$c224 = "gr.",
      peg$c225 = peg$literalExpectation("gr.", true),
      peg$c226 = "gr",
      peg$c227 = peg$literalExpectation("gr", true),
      peg$c228 = "g.",
      peg$c229 = peg$literalExpectation("g.", true),
      peg$c230 = "g",
      peg$c231 = peg$literalExpectation("g", true),
      peg$c232 = "kilograms",
      peg$c233 = peg$literalExpectation("kilograms", true),
      peg$c234 = "kilogram",
      peg$c235 = peg$literalExpectation("kilogram", true),
      peg$c236 = "kg.",
      peg$c237 = peg$literalExpectation("kg.", true),
      peg$c238 = "kg",
      peg$c239 = peg$literalExpectation("kg", true),
      peg$c240 = "liters",
      peg$c241 = peg$literalExpectation("liters", true),
      peg$c242 = "liter",
      peg$c243 = peg$literalExpectation("liter", true),
      peg$c244 = "l.",
      peg$c245 = peg$literalExpectation("l.", true),
      peg$c246 = "l",
      peg$c247 = peg$literalExpectation("l", true),
      peg$c248 = "centiliters",
      peg$c249 = peg$literalExpectation("centiliters", true),
      peg$c250 = "centiliter",
      peg$c251 = peg$literalExpectation("centiliter", true),
      peg$c252 = "cl.",
      peg$c253 = peg$literalExpectation("cl.", true),
      peg$c254 = "cl",
      peg$c255 = peg$literalExpectation("cl", true),
      peg$c256 = "milligrams",
      peg$c257 = peg$literalExpectation("milligrams", true),
      peg$c258 = "milligram",
      peg$c259 = peg$literalExpectation("milligram", true),
      peg$c260 = "mlg.",
      peg$c261 = peg$literalExpectation("mlg.", true),
      peg$c262 = "mlg",
      peg$c263 = peg$literalExpectation("mlg", true),
      peg$c264 = "mg",
      peg$c265 = peg$literalExpectation("mg", true),
      peg$c266 = "mg.",
      peg$c267 = peg$literalExpectation("mg.", true),
      peg$c268 = "milliliters",
      peg$c269 = peg$literalExpectation("milliliters", true),
      peg$c270 = "milliliter",
      peg$c271 = peg$literalExpectation("milliliter", true),
      peg$c272 = "ml.",
      peg$c273 = peg$literalExpectation("ml.", true),
      peg$c274 = "ml",
      peg$c275 = peg$literalExpectation("ml", true),
      peg$c276 = "dashes",
      peg$c277 = peg$literalExpectation("dashes", true),
      peg$c278 = "dash",
      peg$c279 = peg$literalExpectation("dash", true),
      peg$c280 = "handfuls",
      peg$c281 = peg$literalExpectation("handfuls", true),
      peg$c282 = "handful",
      peg$c283 = peg$literalExpectation("handful", true),
      peg$c284 = "hdful",
      peg$c285 = peg$literalExpectation("hdful", true),
      peg$c286 = "hdfl",
      peg$c287 = peg$literalExpectation("hdfl", true),
      peg$c288 = "hdf",
      peg$c289 = peg$literalExpectation("hdf", true),
      peg$c290 = "pinches",
      peg$c291 = peg$literalExpectation("pinches", true),
      peg$c292 = "pinch",
      peg$c293 = peg$literalExpectation("pinch", true),
      peg$c294 = "pinche",
      peg$c295 = peg$literalExpectation("pinche", true),
      peg$c296 = "pch",
      peg$c297 = peg$literalExpectation("pch", true),
      peg$c298 = "touches",
      peg$c299 = peg$literalExpectation("touches", true),
      peg$c300 = "touch",
      peg$c301 = peg$literalExpectation("touch", true),
      peg$c302 = "tch",
      peg$c303 = peg$literalExpectation("tch", true),
      peg$c304 = "slices",
      peg$c305 = peg$literalExpectation("slices", true),
      peg$c306 = "slice",
      peg$c307 = peg$literalExpectation("slice", true),
      peg$c308 = "packets",
      peg$c309 = peg$literalExpectation("packets", true),
      peg$c310 = "packet",
      peg$c311 = peg$literalExpectation("packet", true),
      peg$c312 = "pck",
      peg$c313 = peg$literalExpectation("pck", true),
      peg$c314 = "envelopes",
      peg$c315 = peg$literalExpectation("envelopes", true),
      peg$c316 = "envelope",
      peg$c317 = peg$literalExpectation("envelope", true),
      peg$c318 = "splashes",
      peg$c319 = peg$literalExpectation("splashes", true),
      peg$c320 = "splash",
      peg$c321 = peg$literalExpectation("splash", true),
      peg$c322 = "sprigs",
      peg$c323 = peg$literalExpectation("sprigs", true),
      peg$c324 = "sprig",
      peg$c325 = peg$literalExpectation("sprig", true),
      peg$c326 = "sheets",
      peg$c327 = peg$literalExpectation("sheets", true),
      peg$c328 = "sheet",
      peg$c329 = peg$literalExpectation("sheet", true),
      peg$c330 = "bags",
      peg$c331 = peg$literalExpectation("bags", true),
      peg$c332 = "bag",
      peg$c333 = peg$literalExpectation("bag", true),
      peg$c334 = "doses",
      peg$c335 = peg$literalExpectation("doses", true),
      peg$c336 = "dose",
      peg$c337 = peg$literalExpectation("dose", true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseingredient_full();

    return s0;
  }

  function peg$parseingredient_full() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    s0 = peg$currPos;
    s1 = peg$parseamount();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsews();
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsews();
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseunit();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsews();
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsews();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseimprecise_unit();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = peg$parsews();
              if (s7 !== peg$FAILED) {
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$parsews();
                }
              } else {
                s6 = peg$FAILED;
              }
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parsepreposition();
                if (s7 === peg$FAILED) {
                  s7 = null;
                }
                if (s7 !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parsews();
                  if (s9 !== peg$FAILED) {
                    while (s9 !== peg$FAILED) {
                      s8.push(s9);
                      s9 = peg$parsews();
                    }
                  } else {
                    s8 = peg$FAILED;
                  }
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsephrase();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      if (peg$c0.test(input.charAt(peg$currPos))) {
                        s10 = input.charAt(peg$currPos);
                        peg$currPos++;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c1); }
                      }
                      if (s10 === peg$FAILED) {
                        s10 = null;
                      }
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c2(s1, s3, s5, s7, s9);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseamount() {
    var s0;

    s0 = peg$parsefraction();
    if (s0 === peg$FAILED) {
      s0 = peg$parsemixed_number();
      if (s0 === peg$FAILED) {
        s0 = peg$parseword_number();
        if (s0 === peg$FAILED) {
          s0 = peg$parserange();
          if (s0 === peg$FAILED) {
            s0 = peg$parsefloat();
            if (s0 === peg$FAILED) {
              s0 = peg$parseinteger();
              if (s0 === peg$FAILED) {
                s0 = peg$parsefew();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsecouple();
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsews() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c3;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s0 === peg$FAILED) {
      if (peg$c5.test(input.charAt(peg$currPos))) {
        s0 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c6); }
      }
    }

    return s0;
  }

  function peg$parsepreposition() {
    var s0;
